Style added to Flash messages!

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,9 @@
 
   <body>
     <%= render partial: 'layouts/navbar' %>
-    <%= flash[:message]%>
+    <div class="container">
+      <%= flash[:message]%>
+    </div>
     <div class="container">
       <%= yield %>
     </div>
